@@ -101,7 +101,6 @@ libpoke_modules="
 
 # gnulib modules used in gui/
 gui_modules="
-  alloca
   getopt-gnu
   gettext-h
   "
